reference-llvm/tests/should-fail/fail14.mu
// expression test -- backwards is

function @entry foo() {
    true is 8;
}
